<resources>
    <string name="app_name">CVIAC</string>
    <string name="content_text">CviacApp Messanger will send an SMS \n message to verify your phone number \n\t Enter your phone number"</string>
    <string name="contents_text">Your mobile number not found in our System\n \t\t\tKindly provide additional credentials "</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_group">My Profile</string>
    <string name="action_Notification">Annoncements</string>
    <string name="progress">calling</string>
    <string name="action_grouprefersh">Refresh</string>
    <string name="hint_mobile">Enter Mobile Number</string>
    <string name="hint_6_digit_code">Enter 6 digit code</string>
    <string name="err_msg_name">Invalid Mobile Number</string>
    <string name="title_activity_myprofileactivity">profile</string>
    <string name="checkedmark">&#x2713;</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Camera permission is needed to show the camera preview.</string>
    <string name="btn_sign_up">Button</string>
    <string name="hint_password">DOB</string>
    <string name="hint_email">Mobile Number</string>
    <string name="hint_name">Employee Code</string>
    <string name="dob">DOB</string>
    <string name="server1">cviacmob.p1.im</string>
    <string name="server">ec2-35-162-147-104.us-west-2.compute.amazonaws.com</string>
    <string name="server2">apps.cviac.com</string>


    <string name="mtm_accept_cert">Accept Unknown Certificate?</string>
    <string name="mtm_trust_anchor">The server certificate is not signed by a known Certificate Authority.</string>
    <string name="mtm_cert_expired">The server certificate is expired.</string>
    <string name="mtm_accept_servername">Accept Mismatching Server Name?</string>
    <string name="mtm_hostname_mismatch">Server could not authenticate as \&quot;%s\&quot;. The certificate is only valid for:</string>

    <string name="mtm_connect_anyway">Do you want to connect anyway?</string>
    <string name="mtm_cert_details">Certificate details:</string>

    <string name="mtm_decision_always">Always</string>
    <string name="mtm_decision_once">Once</string>
    <string name="mtm_decision_abort">Abort</string>

    <string name="mtm_notification">Certificate Verification</string>
    <string name="client_name">XMPPClient</string>
    <string name="account_resource_default">@string/client_name</string>
    <string name="newgrp">New Group</string>
    <string name="title_activity_group_contact">GroupContactActivity</string>

</resources>
