<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cviac.activity.cviacapp.HomeActivity">


    <item
        android:id="@+id/refresh_action"
        android:orderInCategory="100"
        android:title="@string/action_grouprefersh"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/action_group"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_Notification"
        android:orderInCategory="100"
        android:title="@string/action_Notification"
        app:showAsAction="never" />

  <!--  <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />-->
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />



    </menu>
