
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="507dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="60dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_mobile"
                android:layout_width="266dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email"
                android:layout_below="@+id/input_Mobilenumber"
                android:layout_alignRight="@+id/input_dob"
                android:layout_alignEnd="@+id/input_dob"
                android:layout_marginTop="34dp"
                android:layout_weight="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_empnumber"
                android:layout_width="261dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:layout_marginTop="41dp"
                android:layout_below="@+id/input_layout_name"
                android:layout_alignLeft="@+id/input_mobile"
                android:layout_alignStart="@+id/input_mobile"
                android:layout_weight="1" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_date"
                android:id="@+id/imageViewdate"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@+id/input_layouhht_name" />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layouhht_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/dob"
                android:ems="10"
                android:id="@+id/editTextdob"
                android:layout_marginTop="14dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/bsend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Send"
                android:textColor="#FFFFFF"
                android:background="@drawable/roundshapebtn"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />


        </RelativeLayout>


    </LinearLayout>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="58dp"
        android:padding="1dp"
        android:text="@string/contents_text"
        android:textColor="#3B3D3C" />

</android.support.design.widget.CoordinatorLayout>